--- a/assets/style.css
+++ b/assets/style.css
@@ -173,3 +173,100 @@ body, html {
     border-bottom: 5px solid #FC4E04;
    
 }
+
+.form-container {
+    max-width: 600px;
+    width: 100%; /* Set width to 90% for small devices */
+    padding: 20px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+label {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+.h6{
+
+    /* font-family: Montserrat; */
+    font-size: 16px;
+    font-weight: 520;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: left;
+    
+}
+form .h6 {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    font-weight: normal;
+    margin-bottom: 5px;
+}
+
+select, input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.submit-button {
+    background-color: #FC4E04;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.getting-started-section {
+    text-align: center;
+    padding: 20px;
+}
+
+.content-image img {
+    width: 100%;
+    max-width: 100%;
+    display: block;
+    margin: 0; /* Remove default margins */
+    padding: 0; /* Remove default paddings */
+}
+.full-width-button {
+    width: 100%; /* Button fills the entire width of the form */
+}
+@media (min-width: 576px) {
+    .carousel-item .col-md-4 {
+        flex: 0 0 33.3333%;
+        max-width: 33.3333%;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .carousel-item .col-md-4 {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
+@media (max-width: 575.98px) {
+    .carousel-item .col-lg-4:not(:first-child) {
+        margin-top: 50px; /* Add space between the images on small devices */
+    }
+}
+.slick-slide img {
+    width: 100%;
+    display: block;
+    margin: 0 auto;
+}
+.slick-prev,
+.slick-next {
+    display: none !important;
+}
