--- a/assets/style.css
+++ b/assets/style.css
@@ -50,7 +50,7 @@ body, html {
     font-weight: 700;
     align-items: center;
    
-    height: 30vh;
+    height: 40vh;
     margin-top: 20px; 
 }
 
@@ -82,10 +82,34 @@ body, html {
 
 .getting-started-section {
     padding: 20px;
+    
+    
 }
 .getting-started-text {
     text-align: left;
+    
 }
+
+.row-text {
+    font-family: Montserrat, sans-serif;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 22px;
+    letter-spacing: 0em;
+    text-align: left;
+}
+
+.row-text h3 {
+    font-weight: 800;
+    font-size: 18px;
+    color: black;
+    margin-bottom: 10px;
+}
+
+.row-text p {
+    margin-bottom: 0;
+}
+
 .havvest{
     color: #FC4E04;
 }
@@ -269,4 +293,96 @@ select, input {
 .slick-prev,
 .slick-next {
     display: none !important;
+}
+.spaced-words{
+    font-family: Montserrat;
+    font-size: 60px;
+    font-weight: 700;
+    line-height: 85px;
+    letter-spacing: 0em;
+    text-align: center;
+    
+
+
+}
+
+.text1{
+    font-family: Montserrat;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 29px;
+    letter-spacing: 0em;
+    text-align: center;
+    
+    
+
+}
+
+
+.video-link{
+    
+   margin-left: 17rem;
+
+    
+
+}
+.watch-video-anchor {
+    position: relative;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.video-link {
+    display: inline-block;
+    position: relative;
+    text-decoration: none;
+}
+
+.video-image {
+    max-width: 100%;
+    height: auto;
+    vertical-align: middle;
+}
+
+.video-text {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 10px 15px;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+}
+
+@media (min-width: 768px) {
+    .video-link {
+        margin-left: 17rem;
+    }
+}
+
+@media (max-width: 767px) {
+    .video-link {
+        margin-left: 0;
+        margin-bottom: 1rem;
+    }
+}
+
+.text{
+    font-family: Montserrat;
+font-size: 36px;
+font-weight: 700;
+line-height: 44px;
+letter-spacing: 0em;
+text-align: left;
+
+font-family: Nunito;
+font-size: 36px;
+font-weight: 700;
+line-height: 49px;
+letter-spacing: 0em;
+text-align: left;
+
 }
